test/netlist/error/any-input.bop
A(_) = b
where
  b = vdd();
end where;
